# coppice

./: .bazelrc  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  Cargo.toml  LANGUAGE_DESIGN.md  MODULE.bazel  README.md  _typos.toml  buildbuddy.yaml  go.mod  go.sum  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
compiler/analysis/: BUILD.bazel  file_role_rules.rs  lib.rs  typecheck.rs
compiler/analysis/type_checker/: assignability.rs  declarations.rs  expressions.rs  mod.rs  naming_rules.rs  statements.rs  type_narrowing.rs
compiler/analysis_pipeline/: BUILD.bazel  lib.rs
compiler/analysis_session/: BUILD.bazel  lib.rs
compiler/autofix_policy/: BUILD.bazel  lib.rs
compiler/binding/: BUILD.bazel  lib.rs
compiler/check_pipeline/: BUILD.bazel  lib.rs
compiler/check_session/: BUILD.bazel  lib.rs
compiler/cli/: BUILD.bazel  main.rs
compiler/cranelift_backend/: BUILD.bazel  builtin_conversion.rs  lib.rs  linker_bridge.rs  object_emission.rs  runtime_interface_emission.rs
compiler/diagnostics/: BUILD.bazel  diagnostic.rs  lib.rs
compiler/driver/: BUILD.bazel  lib.rs
compiler/executable_lowering/: BUILD.bazel  lib.rs
compiler/executable_program/: BUILD.bazel  lib.rs
compiler/exports/: BUILD.bazel  lib.rs
compiler/file_role_rules/: BUILD.bazel  lib.rs
compiler/fix_edits/: BUILD.bazel  lib.rs  lib_test.rs
compiler/lsp/: BUILD.bazel  lib.rs
compiler/middle/: BUILD.bazel  lib.rs  typecheck.rs  types.rs
compiler/package_graph/: BUILD.bazel  lib.rs
compiler/package_symbols/: BUILD.bazel  lib.rs
compiler/parsing/: BUILD.bazel  lexer.rs  lib.rs  parser.rs
compiler/parsing/parser/: declarations.rs  exports.rs  expressions.rs  imports.rs  mod.rs  recovery.rs  statements.rs  types.rs
compiler/phase_results/: BUILD.bazel  lib.rs
compiler/reports/: BUILD.bazel  lib.rs
compiler/resolution/: BUILD.bazel  lib.rs
compiler/runtime_interface/: BUILD.bazel  lib.rs
playground/: BUILD.bazel
playground/api/: BUILD.bazel  compiler_adapter.rs  lib.rs  main.rs  models.rs  path_sanitizer.rs  routes.rs  session_store.rs
playground/deploy/: BUILD.bazel  README.md  configure_docr_auth.sh  deploy.sh  playground_api.service
playground/web/: BUILD.bazel  api.js  api.ts  app.js  app.tsx  editor.js  index.html  main.tsx  style.css  styles.css  tsconfig.json  vite.config.ts
unified_tests/: BUILD.bazel  README.md  fixtures_test.rs  unified_tests_test.rs
unified_tests/assignments/binding_assignment_type_mismatch/: README.md
unified_tests/assignments/immutable_binding_reassignment/: README.md
unified_tests/assignments/mutable_binding_reassignment/: README.md
unified_tests/bindings/duplicate_local_binding/: README.md
unified_tests/bindings/non_optional_binding_with_nil_initializer/: README.md
unified_tests/bindings/optional_binding_with_nil_initializer/: README.md
unified_tests/bindings/typed_binding_initializer_type_mismatch/: README.md
unified_tests/bindings/typed_binding_unknown_type/: README.md
unified_tests/bindings/typed_mutable_binding/: README.md
unified_tests/bindings/unused_local_binding/: README.md
unified_tests/build_pipeline/explicit_output_directory/: README.md  case.test
unified_tests/build_pipeline/file_role_error_with_import_resolution_error/: README.md
unified_tests/build_pipeline/file_role_error_with_type_analysis_error/: README.md
unified_tests/build_pipeline/import_resolution_error_with_type_analysis_error/: README.md
unified_tests/build_pipeline/parsing_error_with_file_role_error/: README.md
unified_tests/build_pipeline/parsing_error_with_import_resolution_error/: README.md
unified_tests/build_pipeline/parsing_error_with_syntax_rule_error/: README.md
unified_tests/build_pipeline/syntax_rule_error_with_import_resolution_error/: README.md
unified_tests/builtins/assert_argument_type_mismatch/: README.md
unified_tests/builtins/assert_call/: README.md
unified_tests/builtins/assert_computed_false_condition/: README.md
unified_tests/builtins/assert_false_condition/: README.md
unified_tests/builtins/assert_literal_false_condition/: README.md
unified_tests/builtins/print_argument_type_mismatch/: README.md
unified_tests/builtins/print_call/: README.md
unified_tests/collections/list_index_assignment/: README.md
unified_tests/collections/list_index_assignment_on_immutable_receiver/: README.md
unified_tests/collections/list_index_assignment_on_mutable_receiver/: README.md
unified_tests/collections/list_index_assignment_out_of_range/: README.md
unified_tests/collections/list_index_assignment_type_mismatch/: README.md
unified_tests/collections/list_index_assignment_via_mutating_parameter/: README.md
unified_tests/collections/list_index_not_int64/: README.md
unified_tests/collections/list_index_read/: README.md
unified_tests/collections/list_length_property/: README.md
unified_tests/collections/list_length_property_access/: README.md
unified_tests/collections/list_literal_and_index_read/: README.md
unified_tests/collections/list_unknown_method/: README.md
unified_tests/collections/list_unknown_property/: README.md
unified_tests/comments/doc_comment_at_end_of_file/: README.md
unified_tests/comments/doc_comment_inside_block/: README.md
unified_tests/comments/doc_comment_on_constant/: README.md
unified_tests/comments/doc_comment_on_function/: README.md
unified_tests/comments/doc_comment_on_method/: README.md
unified_tests/comments/doc_comment_on_struct/: README.md
unified_tests/comments/doc_comment_on_struct_field/: README.md
unified_tests/comments/doc_comment_separated_by_blank_line/: README.md
unified_tests/comments/doc_comment_separated_by_line_comment/: README.md
unified_tests/comments/doc_comment_without_declaration/: README.md
unified_tests/comments/line_comment_full_line_in_function/: README.md
unified_tests/comments/line_comment_trailing_in_statement/: README.md
unified_tests/constants/chained_constant_reference/: README.md
unified_tests/functions/: TEMP_MIGRATION_NOTE.md
(+1753 files in other folders)
