[package]
name = "all_crate_deps"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
# Placeholder for Bazel-only setup; Cargo isn't used.
path = "placeholder.rs"

[dependencies]
# keep-sorted start
clap = { version = "^4.5.58", features = ["derive"] }
globset = { version = "^0.4.18" }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149" }
syn = { version = "^2.0.116", features = ["full", "parsing", "visit"] }
# keep-sorted end

[lints.rust]
# Our crate names use double underscore as path separator.
non_snake_case = "allow"

unused_qualifications = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
