[package]
name = "all_crate_deps"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
# Placeholder for Bazel-only setup; Cargo isn't used.
path = "placeholder.rs"

[dependencies]
# keep-sorted start
axum = { version = "^0.8.8" }
clap = { version = "^4.5.60", features = ["derive"] }
cranelift-codegen = { version = "^0.128.3" }
cranelift-frontend = { version = "^0.128.3" }
cranelift-jit = { version = "^0.128.3" }
cranelift-module = { version = "^0.128.3" }
globset = { version = "^0.4.18" }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149" }
syn = { version = "^2.0.117", features = ["full", "parsing", "visit"] }
tokio = { version = "^1.48.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
# keep-sorted end

[lints.rust]
# Our crate names use double underscore as path separator.
non_snake_case = "allow"

# keep-sorted start
non_ascii_idents = "deny"
redundant_imports = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# keep-sorted end

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

case_sensitive_file_extension_comparisons = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
