module(name = "lang0")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.4")
bazel_dep(name = "gazelle", version = "0.47.0")

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

bazel_dep(name = "rules_rust", version = "0.68.1")
single_version_override(
    module_name = "rules_rust",
    patch_strip = 0,
    patches = ["//patches:rules_rust.patch"],
)

bazel_dep(name = "rules_rust_prost", version = "0.68.1")
bazel_dep(name = "rules_rs", version = "0.0.27")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
    validate_lockfile = True,
)
use_repo(crate, "crates")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.0",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_protobuf",
)
