module(name = "coppice")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "llvm", version = "0.6.1")
single_version_override(
    module_name = "llvm",
    patch_strip = 0,
    patches = ["//patches:llvm.patch"],
)

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.0-rc6")

register_toolchains("@llvm//toolchain:all")

bazel_dep(name = "rules_rust", version = "0.69.0")
single_version_override(
    module_name = "rules_rust",
    patch_strip = 0,
    patches = ["//patches:rules_rust.patch"],
)

bazel_dep(name = "rules_rust_prost", version = "0.69.0")
bazel_dep(name = "rules_rs", version = "0.0.39")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
    validate_lockfile = True,
)
use_repo(crate, "crates")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "monaco_editor",
    build_file_content = """
filegroup(
    name = "assets",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "c280cdcf0b0c13d1a2bf01af958d4387ed06d7f6c918401d00c4adcae1bc72b6",
    strip_prefix = "package/min",
    urls = ["https://registry.npmjs.org/monaco-editor/-/monaco-editor-0.52.2.tgz"],
)

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.copy_to_directory()
use_repo(bazel_lib_toolchains, "copy_to_directory_toolchains")

register_toolchains("@copy_to_directory_toolchains//:all")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.0",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_protobuf",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_bookworm_slim",
    digest = "sha256:3615a749858a1cba49b408fb49c37093db813321355a9ab7c1f9f4836341e9db",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian_bookworm_slim", "debian_bookworm_slim_linux_amd64")
