load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools/bazel/macros:docr.bzl", "docr_push")

pkg_tar(
    name = "playground_image_layer_amd64",
    srcs = ["//playground/api:main"],
    include_runfiles = True,
    package_dir = "/app",
)

pkg_tar(
    # TODO(isaac): Remove this temporary image layer once compiler linking is
    # fully hermetic and no longer depends on `clang++` on PATH.
    name = "playground_llvm_toolchain_layer",
    srcs = [
        "@toolchains_llvm_bootstrapped//tools:clang",
        "@toolchains_llvm_bootstrapped//tools:clang++",
        "@toolchains_llvm_bootstrapped//tools:ld.lld",
        "@toolchains_llvm_bootstrapped//tools:lld",
    ],
    include_runfiles = True,
    package_dir = "/opt/coppice-llvm/bin",
)

oci_image(
    name = "playground_image_amd64",
    base = "@debian_bookworm_slim_linux_amd64",
    entrypoint = ["/app/main"],
    env = {
        "PATH": "/opt/coppice-llvm/bin:/usr/bin:/bin",
    },
    tags = ["manual"],
    tars = [
        ":playground_llvm_toolchain_layer",
        ":playground_image_layer_amd64",
    ],
    visibility = ["//visibility:public"],
)

docr_push(
    name = "playground_push",
    image = ":playground_image_amd64",
    repository = "playground",
)
