load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools/bazel/macros:docr.bzl", "docr_push")

pkg_tar(
    name = "playground_image_layer_amd64",
    srcs = ["//playground/api:main"],
    include_runfiles = True,
    package_dir = "/app",
    target_compatible_with = [
        "@@platforms//os:linux",
        "@@platforms//cpu:x86_64",
    ],
)

oci_image(
    name = "playground_image_amd64",
    base = "@debian_bookworm_slim_linux_amd64",
    entrypoint = ["/app/main"],
    target_compatible_with = [
        "@@platforms//os:linux",
        "@@platforms//cpu:x86_64",
    ],
    tars = [":playground_image_layer_amd64"],
    visibility = ["//visibility:public"],
)

docr_push(
    name = "playground_push",
    image = ":playground_image_amd64",
    repository = "playground",
    target_compatible_with = [
        "@@platforms//os:linux",
        "@@platforms//cpu:x86_64",
    ],
)
