load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "analysis",
    srcs = [
        "file_role_rules.rs",
        "lib.rs",
        "type_checker/assignability.rs",
        "type_checker/declarations.rs",
        "type_checker/expressions.rs",
        "type_checker/mod.rs",
        "type_checker/naming_rules.rs",
        "type_checker/statements.rs",
        "type_checker/type_narrowing.rs",
        "type_checker/unused_bindings.rs",
        "types.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/source",
        "//compiler/syntax",
    ],
)
