load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "analysis_session",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/analysis_pipeline",
        "//compiler/reports",
    ],
)

dependency_enforcement_test(
    name = "analysis_session_forbidden_dependencies",
    forbidden = [
        "//compiler/cranelift_backend",
        "//compiler/executable_lowering",
        "//compiler/runtime_interface",
    ],
    target = ":analysis_session",
)
