load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "binding",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/symbols",
        "//compiler/visibility",
    ],
)

dependency_enforcement_test(
    name = "binding_forbidden_dependencies",
    forbidden = [
        "//compiler/driver",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/typecheck",
        "//compiler/workspace",
    ],
    target = ":binding",
)
