load("//tools/bazel/macros:rust.bzl", "rust_binary")

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    data = [
        "@toolchains_llvm_bootstrapped//toolchain:linker_wrapper",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/driver",
        "//compiler/reports",
        "@crates//:clap",
        "@crates//:serde_json",
    ],
)
