load("//tools/bazel/macros:rust.bzl", "rust_binary")

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/autofix_policy",
        "//compiler/check_pipeline",
        "//compiler/driver",
        "//compiler/lsp",
        "//compiler/reports",
        "@crates//:clap",
        "@crates//:serde_json",
    ],
)
