load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "diagnostics",
    srcs = [
        "diagnostic.rs",
        "lib.rs",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//compiler/source"],
)

dependency_enforcement_test(
    name = "diagnostics_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/exports",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/symbols",
        "//compiler/syntax",
        "//compiler/typecheck",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":diagnostics",
)
