load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "driver",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/executable_lowering",
        "//compiler/file_role_rules",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/phase_results",
        "//compiler/reports",
        "//compiler/resolution",
        "//compiler/rust_backend",
        "//compiler/semantic_lowering",
        "//compiler/semantic_program",
        "//compiler/source",
        "//compiler/syntax",
        "//compiler/syntax_rules",
        "//compiler/type_analysis",
        "//compiler/type_annotated_program",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
)
