load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "driver",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/check_pipeline",
        "//compiler/cranelift_backend",
        "//compiler/executable_lowering",
        "//compiler/phase_results",
        "//compiler/reports",
        "//compiler/source",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
)
