load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "driver",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/analysis_pipeline",
        "//compiler/autofix_policy",
        "//compiler/cranelift_backend",
        "//compiler/executable_lowering",
        "//compiler/phase_results",
        "//compiler/reports",
        "//compiler/source",
        "//compiler/visibility",
    ],
)
