load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "executable_lowering",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/executable_program",
        "//compiler/phase_results",
        "//compiler/source",
        "//compiler/type_annotated_program",
    ],
)

dependency_enforcement_test(
    name = "executable_lowering_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/cranelift_backend",
        "//compiler/driver",
        "//compiler/exports",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/reports",
        "//compiler/resolution",
        "//compiler/rust_backend",
        "//compiler/semantic_lowering",
        "//compiler/semantic_program",
        "//compiler/semantic_types",
        "//compiler/symbols",
        "//compiler/syntax",
        "//compiler/syntax_rules",
        "//compiler/type_analysis",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":executable_lowering",
)
