load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "executable_program",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = ["@crates//:serde"],
)

dependency_enforcement_test(
    name = "executable_program_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/diagnostics",
        "//compiler/driver",
        "//compiler/cranelift_backend",
        "//compiler/executable_lowering",
        "//compiler/exports",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/phase_results",
        "//compiler/reports",
        "//compiler/resolution",
        "//compiler/semantic_lowering",
        "//compiler/semantic_program",
        "//compiler/semantic_types",
        "//compiler/source",
        "//compiler/symbols",
        "//compiler/syntax",
        "//compiler/syntax_rules",
        "//compiler/type_analysis",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":executable_program",
)
