load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "exports",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/source",
        "//compiler/symbols",
        "//compiler/syntax",
    ],
)

dependency_enforcement_test(
    name = "exports_forbidden_dependencies",
    forbidden = [
        "//compiler/cranelift_backend",
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/semantic_types",
        "//compiler/type_analysis",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":exports",
)
