load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "file_role_rules",
    srcs = ["lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/source",
        "//compiler/syntax",
    ],
)

dependency_enforcement_test(
    name = "file_role_rules_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/exports",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/symbols",
        "//compiler/typecheck",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":file_role_rules",
)
