load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "middle",
    srcs = [
        "lib.rs",
        "typecheck.rs",
        "types.rs",
    ],
    crate_root = "lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/frontend",
    ],
)
