load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "package_graph",
    srcs = ["lib.rs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/source",
        "//compiler/symbols",
        "//compiler/visibility",
    ],
)

dependency_enforcement_test(
    name = "package_graph_forbidden_dependencies",
    forbidden = [
        "//compiler/cranelift_backend",
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/file_role_rules",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/parsing",
        "//compiler/semantic_types",
        "//compiler/type_analysis",
        "//compiler/workspace",
    ],
    target = ":package_graph",
)
