load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "package_symbols",
    srcs = ["lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/packages",
        "//compiler/semantic_types",
        "//compiler/source",
        "//compiler/syntax",
    ],
)

dependency_enforcement_test(
    name = "package_symbols_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/exports",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/parsing",
        "//compiler/symbols",
        "//compiler/type_analysis",
        "//compiler/typecheck",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":package_symbols",
)
