load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "parsing",
    srcs = [
        "lexer.rs",
        "lib.rs",
        "parser/declarations.rs",
        "parser/expressions.rs",
        "parser/mod.rs",
        "parser/recovery.rs",
        "parser/statements.rs",
        "parser/types.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/source",
        "//compiler/syntax",
    ],
)
